Correction variable state initial dans le paramètre de la fonction collapse et suppression de la div filter dans thumbProduct remplacé par ::before pour appliqué le filtre dans le style

--- a/src/_scss/components/thumbProduct.scss
+++ b/src/_scss/components/thumbProduct.scss
@@ -11,15 +11,17 @@
         border-radius: 10px;
         object-fit: cover;
     }
-    &__filter {
+    &::before {
         position: absolute;
+        content: "";
         top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
         border-radius: 10px;
         background: linear-gradient(360deg, rgba(0, 0, 0, 0.5), transparent 40%);
     }
-    
+
     &__title {
         width: 70%;
         color: #fff;
